fix -webkit-scrollbar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,10 +7,6 @@ figure p {
   color: #495057;
 }
 
-.bio p {
-  margin-bottom: -70px;
-}
-
 figure a:hover {
   color: #495057;
 }
